--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -184,93 +184,62 @@
                             "    <tr style=\"text-align: right;\">\n",
                             "      <th></th>\n",
                             "      <th>Date</th>\n",
-                            "      <th>Rainfall_S_Piero</th>\n",
-                            "      <th>Rainfall_Mangona</th>\n",
-                            "      <th>Rainfall_S_Agata</th>\n",
-                            "      <th>Rainfall_Cavallina</th>\n",
-                            "      <th>Rainfall_Le_Croci</th>\n",
-                            "      <th>Temperature_Le_Croci</th>\n",
+                            "      <th>Lake_Level</th>\n",
+                            "      <th>Flow_Rate</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
                             "      <td>03/06/2002</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>249.43</td>\n",
+                            "      <td>0.31</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
                             "      <td>04/06/2002</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>249.43</td>\n",
+                            "      <td>0.31</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
                             "      <td>05/06/2002</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>249.43</td>\n",
+                            "      <td>0.31</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
                             "      <td>06/06/2002</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>249.43</td>\n",
+                            "      <td>0.31</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
                             "      <td>07/06/2002</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>249.44</td>\n",
+                            "      <td>0.31</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
                             "</div>"
                         ],
                         "text/plain": [
-                            "         Date  Rainfall_S_Piero  Rainfall_Mangona  Rainfall_S_Agata  \\\n",
-                            "0  03/06/2002               NaN               NaN               NaN   \n",
-                            "1  04/06/2002               NaN               NaN               NaN   \n",
-                            "2  05/06/2002               NaN               NaN               NaN   \n",
-                            "3  06/06/2002               NaN               NaN               NaN   \n",
-                            "4  07/06/2002               NaN               NaN               NaN   \n",
-                            "\n",
-                            "   Rainfall_Cavallina  Rainfall_Le_Croci  Temperature_Le_Croci  \n",
-                            "0                 NaN                NaN                   NaN  \n",
-                            "1                 NaN                NaN                   NaN  \n",
-                            "2                 NaN                NaN                   NaN  \n",
-                            "3                 NaN                NaN                   NaN  \n",
-                            "4                 NaN                NaN                   NaN  "
+                            "         Date  Lake_Level  Flow_Rate\n",
+                            "0  03/06/2002      249.43       0.31\n",
+                            "1  04/06/2002      249.43       0.31\n",
+                            "2  05/06/2002      249.43       0.31\n",
+                            "3  06/06/2002      249.43       0.31\n",
+                            "4  07/06/2002      249.44       0.31"
                         ]
                     },
-                    "execution_count": 13,
+                    "execution_count": 14,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
                 "# Drop not useful columns\n",
-                "df_Bilancino = df.drop(['Lake_Level', 'Flow_Rate'], axis=1)\n",
+                "df_Bilancino = df.drop(['Rainfall_S_Piero', 'Rainfall_Mangona', 'Rainfall_S_Agata', 'Rainfall_Cavallina', 'Rainfall_Le_Croci', 'Temperature_Le_Croci'], axis=1)\n",
                 "\n",
                 "df_Bilancino.head()"
             ]
