--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -246,29 +246,46 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Date                      0\n",
-                        "Rainfall_S_Piero        577\n",
-                        "Rainfall_Mangona        577\n",
-                        "Rainfall_S_Agata        577\n",
-                        "Rainfall_Cavallina      577\n",
-                        "Rainfall_Le_Croci       577\n",
-                        "Temperature_Le_Croci    578\n",
-                        "Lake_Level                0\n",
-                        "Flow_Rate                21\n",
+                        "Date           0\n",
+                        "Lake_Level     0\n",
+                        "Flow_Rate     21\n",
                         "dtype: int64\n"
                     ]
                 }
             ],
             "source": [
                 "# Check for missing values\n",
-                "print(df.isnull().sum())"
+                "print(df_Bilancino.isnull().sum())"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 16,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Date          0\n",
+                        "Lake_Level    0\n",
+                        "Flow_Rate     0\n",
+                        "dtype: int64\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Drop Null values in Flow_rate column\n",
+                "df_clean = df_Bilancino.dropna(subset=['Flow_Rate'])\n",
+                "\n",
+                "print(df_clean.isnull().sum())"
             ]
         }
     ],
