--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -267,25 +267,114 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 24,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Convert the 'date' column to datetime format\n",
+                "df_Bilancino['Date'] = pd.to_datetime(df_Bilancino['Date'], format='%d/%m/%Y')"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 29,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Extract the year and create a new 'year' column\n",
+                "df_Bilancino['Year'] = df_Bilancino['Date'].dt.year"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 30,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Date          0\n",
-                        "Lake_Level    0\n",
-                        "Flow_Rate     0\n",
-                        "dtype: int64\n"
+                        "      Date  Lake_Level  Flow_Rate  Year\n",
+                        "Year                                   \n",
+                        "2002     0           0         16     0\n",
+                        "2003     0           0          5     0\n",
+                        "2004     0           0          0     0\n",
+                        "2005     0           0          0     0\n",
+                        "2006     0           0          0     0\n",
+                        "2007     0           0          0     0\n",
+                        "2008     0           0          0     0\n",
+                        "2009     0           0          0     0\n",
+                        "2010     0           0          0     0\n",
+                        "2011     0           0          0     0\n",
+                        "2012     0           0          0     0\n",
+                        "2013     0           0          0     0\n",
+                        "2014     0           0          0     0\n",
+                        "2015     0           0          0     0\n",
+                        "2016     0           0          0     0\n",
+                        "2017     0           0          0     0\n",
+                        "2018     0           0          0     0\n",
+                        "2019     0           0          0     0\n",
+                        "2020     0           0          0     0\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_6820/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
             ],
             "source": [
-                "# Drop Null values in Flow_rate column\n",
-                "df_clean = df_Bilancino.dropna(subset=['Flow_Rate'])\n",
+                "# Group by the 'Year' column and count null values for each column\n",
+                "null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n",
                 "\n",
-                "print(df_clean.isnull().sum())"
+                "# Display the result\n",
+                "print(null_counts_per_year)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "All Null values are found from the years 2002 & 2003. Therefore we will drop those rows and focus on the more accurate data from 2004 onwards."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 33,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "KeyError",
+                    "evalue": "'Year'",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3806\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+                        "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+                        "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+                        "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+                        "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+                        "\u001b[0;31mKeyError\u001b[0m: 'Year'",
+                        "\nThe above exception was the direct cause of the following exception:\n",
+                        "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+                        "\u001b[1;32m/workspaces/Time-Series-Marcel/src/explore.ipynb Celda 10\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Filter the DataFrame to keep only years >= 2004\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m df_Bilancino \u001b[39m=\u001b[39m df_Bilancino[df_Bilancino[\u001b[39m'\u001b[39;49m\u001b[39mYear\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m>\u001b[39m \u001b[39m2003\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Drop the 'Year' column as it is no longer needed\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m df_Bilancino \u001b[39m=\u001b[39m df_Bilancino\u001b[39m.\u001b[39mdrop(\u001b[39m'\u001b[39m\u001b[39mYear\u001b[39m\u001b[39m'\u001b[39m, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   4103\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(casted_key, \u001b[39mslice\u001b[39m) \u001b[39mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[39misinstance\u001b[39m(casted_key, abc\u001b[39m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mslice\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+                        "\u001b[0;31mKeyError\u001b[0m: 'Year'"
+                    ]
+                }
+            ],
+            "source": [
+                "# Filter the DataFrame to keep only years >= 2004\n",
+                "df_Bilancino = df_Bilancino[df_Bilancino['Year'] > 2003]\n",
+                "# Drop the 'Year' column as it is no longer needed\n",
+                "df_Bilancino = df_Bilancino.drop('Year', axis=1)\n",
+                "\n",
+                "df_Bilancino.head()"
             ]
         }
     ],
