--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -139,7 +139,7 @@
                             "4       0.31  "
                         ]
                     },
-                    "execution_count": 34,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -232,7 +232,7 @@
                             "4  07/06/2002      249.44       0.31"
                         ]
                     },
-                    "execution_count": 35,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -246,7 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -267,7 +267,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -277,7 +277,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 38,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -287,7 +287,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 39,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -321,7 +321,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_6820/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "/tmp/ipykernel_596/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
                         "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
@@ -343,7 +343,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 40,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -416,7 +416,7 @@
                             "581 2004-01-05      251.37        0.5"
                         ]
                     },
-                    "execution_count": 40,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -439,14 +439,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_6820/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_596/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Lake_Level'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -464,7 +464,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_6820/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_596/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Flow_Rate'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -502,11 +502,90 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Overall statitical features of Lake level and Flow rate"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "                  mean  median   variance  standard deviation      q1      q2  \\\n",
+                        "Lake_Level  249.553735  250.24   4.766574            2.183248  247.93  250.24   \n",
+                        "Flow_Rate     2.777826    1.50  17.064648            4.130938    0.60    1.50   \n",
+                        "\n",
+                        "                q3   IQR  minimum  maximum  range  \n",
+                        "Lake_Level  251.37  3.44   243.53   252.76   9.23  \n",
+                        "Flow_Rate     3.00  2.40     0.45    74.65  74.20  \n"
+                    ]
+                }
+            ],
+            "source": [
+                "# Calculate statistical features for Lake Level and Flow Rate\n",
+                "stat_features = df_Bilancino[['Lake_Level', 'Flow_Rate']].describe().T\n",
+                "\n",
+                "# Calculate Interquartile Range (IQR)\n",
+                "stat_features['IQR'] = stat_features['75%'] - stat_features['25%']\n",
+                "\n",
+                "# Add the range\n",
+                "stat_features['range'] = stat_features['max'] - stat_features['min']\n",
+                "\n",
+                "# Calculate variance separately and add it to the DataFrame\n",
+                "variance = df_Bilancino[['Lake_Level', 'Flow_Rate']].var()\n",
+                "stat_features['variance'] = variance\n",
+                "\n",
+                "# Reorder the columns\n",
+                "stat_features = stat_features[['mean', '50%', 'variance', 'std', '25%', '50%', '75%', 'IQR', 'min', 'max', 'range']]\n",
+                "stat_features.columns = ['mean', 'median', 'variance', 'standard deviation', 'q1', 'q2', 'q3', 'IQR', 'minimum', 'maximum', 'range']\n",
+                "\n",
+                "# Display the relevant statistical features\n",
+                "print(stat_features)"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": []
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+                "\n",
+                "# Decompose the Lake_Level time series\n",
+                "decomp_lake_level = seasonal_decompose(df_Bilancino['Lake_Level'].fillna(method='ffill'), model='additive', period=365)\n",
+                "decomp_flow_rate = seasonal_decompose(df_Bilancino['Flow_Rate'].fillna(method='ffill'), model='additive', period=365)\n",
+                "\n",
+                "# Plot Lake Level Decomposition\n",
+                "f, ax = plt.subplots(4, 1, figsize=(15, 12), sharex=True)\n",
+                "decomp_lake_level.observed.plot(ax=ax[0], title='Lake Level: Observed')\n",
+                "decomp_lake_level.trend.plot(ax=ax[1], title='Lake Level: Trend')\n",
+                "decomp_lake_level.seasonal.plot(ax=ax[2], title='Lake Level: Seasonal')\n",
+                "decomp_lake_level.resid.plot(ax=ax[3], title='Lake Level: Residual')\n",
+                "\n",
+                "plt.show()\n",
+                "\n",
+                "# Plot Flow Rate Decomposition\n",
+                "f, ax = plt.subplots(4, 1, figsize=(15, 12), sharex=True)\n",
+                "decomp_flow_rate.observed.plot(ax=ax[0], title='Flow Rate: Observed')\n",
+                "decomp_flow_rate.trend.plot(ax=ax[1], title='Flow Rate: Trend')\n",
+                "decomp_flow_rate.seasonal.plot(ax=ax[2], title='Flow Rate: Seasonal')\n",
+                "decomp_flow_rate.resid.plot(ax=ax[3], title='Flow Rate: Residual')\n",
+                "\n",
+                "plt.show()"
+            ]
         }
     ],
     "metadata": {
