--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 26,
             "metadata": {},
             "outputs": [
                 {
@@ -139,7 +139,7 @@
                             "4       0.31  "
                         ]
                     },
-                    "execution_count": 1,
+                    "execution_count": 26,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [
                 {
@@ -232,7 +232,7 @@
                             "4  07/06/2002      249.44       0.31"
                         ]
                     },
-                    "execution_count": 2,
+                    "execution_count": 27,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -246,7 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 28,
             "metadata": {},
             "outputs": [
                 {
@@ -267,7 +267,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -277,7 +277,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 30,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -287,7 +287,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 31,
             "metadata": {},
             "outputs": [
                 {
@@ -343,7 +343,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 32,
             "metadata": {},
             "outputs": [
                 {
@@ -416,7 +416,7 @@
                             "581 2004-01-05      251.37        0.5"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 32,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -439,7 +439,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 33,
             "metadata": {},
             "outputs": [
                 {
@@ -510,7 +510,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 34,
             "metadata": {},
             "outputs": [
                 {
@@ -558,7 +558,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 35,
             "metadata": {},
             "outputs": [
                 {
@@ -627,7 +627,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 36,
             "metadata": {},
             "outputs": [
                 {
@@ -702,7 +702,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 37,
             "metadata": {},
             "outputs": [
                 {
@@ -766,7 +766,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 38,
             "metadata": {},
             "outputs": [
                 {
@@ -796,7 +796,14 @@
                         "\t10%: -2.567\n",
                         "The series is stationary\n",
                         "\n",
-                        "ADF Test for Flow Rate:\n"
+                        "ADF Test for Flow Rate:\n",
+                        "ADF Statistic: -10.092709\n",
+                        "p-value: 0.000000\n",
+                        "Critical Values:\n",
+                        "\t1%: -3.431\n",
+                        "\t5%: -2.862\n",
+                        "\t10%: -2.567\n",
+                        "The series is stationary\n"
                     ]
                 },
                 {
@@ -805,19 +812,6 @@
                     "text": [
                         "/tmp/ipykernel_596/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "ADF Statistic: -10.092709\n",
-                        "p-value: 0.000000\n",
-                        "Critical Values:\n",
-                        "\t1%: -3.431\n",
-                        "\t5%: -2.862\n",
-                        "\t10%: -2.567\n",
-                        "The series is stationary\n"
                     ]
                 }
             ],
@@ -855,9 +849,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 44,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "ValueError",
+                    "evalue": "numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+                        "\u001b[1;32m/workspaces/Time-Series-Marcel/src/explore.ipynb Celda 23\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpmdarima\u001b[39;00m \u001b[39mimport\u001b[39;00m auto_arima\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Fit ARIMA model\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m arima_model \u001b[39m=\u001b[39m auto_arima(df_Bilancino[\u001b[39m'\u001b[39m\u001b[39mFlow_Rate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mfillna(method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mffill\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m                          start_p\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, start_q\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m                          max_p\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m, max_q\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m                          suppress_warnings\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m     <a href='vscode-notebook-cell://codespaces%2Bprobable-space-umbrella-xj7qjvwgqp7c6r4r/workspaces/Time-Series-Marcel/src/explore.ipynb#X41sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m                          stepwise\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pmdarima/__init__.py:52\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m __check_build\n\u001b[1;32m     51\u001b[0m \u001b[39m# Stuff we want at top-level\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39marima\u001b[39;00m \u001b[39mimport\u001b[39;00m auto_arima, ARIMA, AutoARIMA, StepwiseContext, decompose\n\u001b[1;32m     53\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m acf, autocorr_plot, c, pacf, plot_acf, plot_pacf, \\\n\u001b[1;32m     54\u001b[0m     tsdisplay\n\u001b[1;32m     55\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_show_versions\u001b[39;00m \u001b[39mimport\u001b[39;00m show_versions\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pmdarima/arima/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Author: Taylor Smith <taylor.smith@alkaline-ml.com>\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mapprox\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39marima\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mauto\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pmdarima/arima/approx.py:9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Author: Taylor Smith <taylor.smith@alkaline-ml.com>\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39m# R approx function\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marray\u001b[39;00m \u001b[39mimport\u001b[39;00m c, check_endog\n\u001b[1;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m get_callable\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcompat\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnumpy\u001b[39;00m \u001b[39mimport\u001b[39;00m DTYPE\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pmdarima/utils/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Author: Taylor Smith <taylor.smith@alkaline-ml.com>\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39marray\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mmetaestimators\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mvisualization\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+                        "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pmdarima/utils/array.py:13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcompat\u001b[39;00m \u001b[39mimport\u001b[39;00m DTYPE\n\u001b[0;32m---> 13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_array\u001b[39;00m \u001b[39mimport\u001b[39;00m C_intgrt_vec\n\u001b[1;32m     15\u001b[0m __all__ \u001b[39m=\u001b[39m [\n\u001b[1;32m     16\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mas_series\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     17\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mis_iterable\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     23\u001b[0m ]\n\u001b[1;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mas_series\u001b[39m(x, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n",
+                        "File \u001b[0;32mpmdarima/utils/_array.pyx:1\u001b[0m, in \u001b[0;36minit pmdarima.utils._array\u001b[0;34m()\u001b[0m\n",
+                        "\u001b[0;31mValueError\u001b[0m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
+                    ]
+                }
+            ],
             "source": [
                 "from pmdarima import auto_arima\n",
                 "\n",
