--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -554,6 +554,10 @@
             "metadata": {},
             "source": [
                 "Explicar conclusiones:\n",
+                "Lake Level: La proximidad entre la media y mediana así como el estrecho rango interquartil muestra la estabilidad del \"lake level\" donde la mayoria de los valores se agrupan cerca de la media. Hay muy poca varianza entre los valores del \"lake level\". Se observa que el nivel del agua se mantiene casi siempre en un rango similar sin observarse grandes variaciones en el mismo.\n",
+                "\n",
+                "\n",
+                "\n",
                 "Observamos un nivel de varianza muy grande en el flow rate. Hay momentos en los que el \n",
                 "\n",
                 "Falta de datos exogenos.\n",
